--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,65 +1,70 @@
 .header {
-  height: 100vh;
-  /* max-height: 1100px; */
-  max-height: 400px;
-  position: relative;
-  overflow: hidden;
+    height: 100vh;
+    /* max-height: 1100px; */
+    max-height: 400px;
+    position: relative;
+    overflow: hidden;
 }
 .headerWrapper {
-  width: 100%;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  overflow: hidden;
-  position: relative;
+    width: 100%;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    position: relative;
 }
 .container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 .container::before {
-  content: "";
-  position: absolute;
-  z-index: 2;
-  width: 100%;
-  height: 100vh;
-  bottom: 0vh;
-  left: 0;
-  overflow: hidden;
-  opacity: 0.4s;
-  background: linear-gradient(
-    0deg,
-    rgba(0, 0, 0, 0.2) 0%,
-    rgba(0, 0, 0, 0.2) 50%,
-    rgba(0, 0, 0, 0.6) 100%
-  );
+    content: '';
+    position: absolute;
+    z-index: 2;
+    width: 100%;
+    height: 100vh;
+    bottom: 0vh;
+    left: 0;
+    overflow: hidden;
+    opacity: 0.4s;
+    background: linear-gradient(
+        0deg,
+        rgba(0, 0, 0, 0.2) 0%,
+        rgba(0, 0, 0, 0.2) 50%,
+        rgba(0, 0, 0, 0.6) 100%
+    );
 }
 .headerImage {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100vh;
-  height: 100vh;
-  object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+
+.headerImage img {
+    width: 100%;
+    width: 100%;
 }
 .headerTitle {
-  position: absolute;
-  z-index: 10;
-  max-width: calc(100%-100px);
-  color: #fff;
-  background: rgba(31, 31, 32, 0.253);
-  padding: 10px 40px;
-  text-align: center;
+    position: absolute;
+    z-index: 10;
+    max-width: calc(100%-100px);
+    color: #fff;
+    background: rgba(31, 31, 32, 0.253);
+    padding: 10px 40px;
+    text-align: center;
 }
 .headerTitle > h1 {
-  font-size: clamp(1rem, 8vw, 2rem);
-  font-weight: 500;
-  text-transform: uppercase;
-  text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
+    font-size: clamp(1rem, 8vw, 2rem);
+    font-weight: 500;
+    text-transform: uppercase;
+    text-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
 }
